# pyproject-nix

./: LICENSE  flake.nix  readme.md
lib/: make-flake.nix
template/: example.py  flake.nix  pyproject.toml
template/nix/: module.nix
